測試 post_list.xml textview
Signed-off-by: star356694 <g5468y5@gmail.com>

--- a/app/src/main/res/layout/post_list.xml
+++ b/app/src/main/res/layout/post_list.xml
@@ -40,7 +40,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="001"
+            android:text="食物-名稱001"
             />
         <TextView
             android:layout_width="0dp"
