--- a/app/src/main/res/layout/toolbar_bottom.xml
+++ b/app/src/main/res/layout/toolbar_bottom.xml
@@ -4,15 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="bottom"
-    >
+    android:layout_alignParentBottom="true"
+    android:orientation="horizontal">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/toolbar_bottom"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary"
         android:layout_gravity="bottom"
-        android:background="@color/test01"
-        app:menu="@menu/menu_bottom"/>
+        app:itemHorizontalTranslationEnabled="false"
+        app:menu="@menu/menu_bottom" />
 
 </LinearLayout>
