--- a/app/src/main/res/layout/toolbar_top.xml
+++ b/app/src/main/res/layout/toolbar_top.xml
@@ -5,7 +5,7 @@
     android:id="@+id/toolbar_top"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/test01"
+    android:background="@color/colorPrimary"
     android:theme="@style/Theme.AppCompat.Light.NoActionBar"
     app:menu="@menu/menu01">
 
