--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="test01">#FF9A3D</color>
+    <color name="colorPrimary">#FF9A3D</color>
+    <color name="bgColor">#ECECEC</color>
     <color name="test02">#FFD983</color>
 </resources>
