--- a/app/src/main/res/layout/row_posts.xml
+++ b/app/src/main/res/layout/row_posts.xml
@@ -6,12 +6,60 @@
     app:cardCornerRadius="3dp"
     app:cardElevation="3dp"
     app:cardUseCompatPadding="true"
-    app:cardBackgroundColor="@color/colorPrimary">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingHorizontal="16dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/pImage"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:src="@drawable/guava"
+                android:layout_marginEnd="8dp"
+                />
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:src="@drawable/guava2"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/pTitleTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:text="title "
+                android:autoLink="all"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:text="X"/>
+            <TextView
+                android:id="@+id/pQuantityTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:text=" 6"/>
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,60 +69,28 @@
 
             <com.blogspot.atifsoftwares.circularimageview.CircularImageView
                 android:id="@+id/uPicIv"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:scaleType="centerCrop"
+                android:layout_marginEnd="8dp"
                 android:src="@drawable/guava"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="1">
+
                 <TextView
                     android:id="@+id/uNameTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Name"
                     android:textColor="@color/black"
-                    android:textSize="20sp"/>
-                <TextView
-                    android:id="@+id/pTimeTv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="33 min"/>
+                    android:textSize="16sp"/>
 
-            </LinearLayout>
-            <ImageButton
-                android:id="@+id/moreBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_uncheck"
-                android:src="@drawable/ic_uncheck"/>
+
+
+
         </LinearLayout>
-        <TextView
-            android:id="@+id/pTitleTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:text="title"
-            android:autoLink="all"/>
-        <TextView
-            android:id="@+id/pQuantityTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="6"/>
-        <TextView
-            android:id="@+id/pDescriptionTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="description"
-            android:autoLink="all"/>
-        <ImageView
-            android:id="@+id/pImage"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="@color/browser_actions_bg_grey"/>
+
+
+
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
