--- a/app/src/main/res/layout/activity_postdetail.xml
+++ b/app/src/main/res/layout/activity_postdetail.xml
@@ -16,15 +16,6 @@
             android:layout_alignParentStart="true"
             android:src="@drawable/common_full_open_on_phone"
             android:id="@+id/close"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="POST"
-            android:id="@+id/post"
-            android:textSize="16sp"
-            android:layout_marginEnd="10dp"
-            android:layout_alignParentEnd="true"
-            android:textColor="@color/colorPrimary"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -45,6 +36,15 @@
                 android:hint="Description"
                 android:maxLines="5"
                 android:id="@+id/description"/>
+
+            <TextView
+                android:id="@+id/post"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:text="POST"
+                android:textColor="@color/colorPrimary"
+                android:textSize="16sp" />
 
         </LinearLayout>
     </RelativeLayout>
