--- a/app/src/main/res/layout/auth/layout/activity_login.xml
+++ b/app/src/main/res/layout/auth/layout/activity_login.xml
@@ -23,6 +23,7 @@
         android:layout_centerVertical="true">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/emailEt"
+            android:inputType="textEmailAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"/>
