--- a/app/src/main/res/layout/me/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/me/layout/fragment_profile.xml
@@ -134,6 +134,7 @@
 
         <TextView
             android:id="@+id/introTv"
+            android:inputType="textMultiLine"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
