--- a/app/src/main/res/layout/group/layout/group_in00.xml
+++ b/app/src/main/res/layout/group/layout/group_in00.xml
@@ -67,8 +67,7 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="@+id/line_right"
         app:layout_constraintStart_toStartOf="@+id/line_left"
-        app:layout_constraintTop_toBottomOf="@+id/group_title"
-        android:background="">
+        app:layout_constraintTop_toBottomOf="@+id/group_title">
 
         <TextView
             android:layout_width="wrap_content"
