--- a/app/src/main/res/layout/list/layout/row_posts.xml
+++ b/app/src/main/res/layout/list/layout/row_posts.xml
@@ -21,18 +21,17 @@
 
             <ImageView
                 android:id="@+id/pImage"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:src="@drawable/guava"
                 android:layout_marginEnd="8dp"
                 />
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:src="@drawable/guava2"
-                />
+<!--            <ImageView-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:src="@drawable/guava2"-->
+<!--                />-->
         </LinearLayout>
 
         <LinearLayout
