--- a/app/src/main/res/layout/add/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/add/layout/activity_add_post.xml
@@ -144,12 +144,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="接受使用換食櫃"
-                    android:textSize="16sp"
-                    android:layout_marginRight="20dp"/>
+                    android:textSize="16sp" />
 
-                <Button
+                <CheckBox
                     android:layout_width="30dp"
-                    android:layout_height="32dp"/>
+                    android:layout_height="30dp"/>
 
             </LinearLayout>
 
@@ -174,6 +173,7 @@
                     android:layout_marginRight="20dp"/>
 
             <Spinner
+                android:id="@+id/spinner_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
