--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,6 @@
     <color name="colorPrimary">#FF9A3D</color>
     <color name="bgColor">#ECECEC</color>
     <color name="test02">#FFD983</color>
-
     <color name="grey">#AAA6A6</color>
+    <color name="second_text">#FF000000</color>
 </resources>
