--- a/app/src/main/res/layout/add/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/add/layout/activity_add_post.xml
@@ -104,6 +104,7 @@
                 android:layout_marginBottom="6dp" />
 
             <EditText
+                android:id="@+id/pTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
@@ -130,6 +131,7 @@
                 android:layout_marginBottom="6dp" />
 
             <EditText
+                android:id="@+id/pLocation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
@@ -147,9 +149,10 @@
                     android:textSize="16sp"
                     android:layout_marginRight="20dp"/>
 
-                <Button
-                    android:layout_width="30dp"
-                    android:layout_height="32dp"/>
+                <CheckBox
+                    android:id="@+id/useBox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
