--- a/app/src/main/res/layout/auth/layout/activity_login.xml
+++ b/app/src/main/res/layout/auth/layout/activity_login.xml
@@ -1,77 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="none"
+    android:padding="24dp"
     tools:context=".Login">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="登入"
-        android:textColor="@color/colorPrimary"
-        android:textSize="25dp"/>
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
+            android:text="換 享 食 客"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:textSize="46sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="為食物找到適合的新家"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp"/>
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/emailEt"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginTop="80dp"
+                android:inputType="textEmailAddress"
+                android:hint="帳號/信箱"
+                android:background="@drawable/background_input"
+                android:paddingHorizontal="16dp"
+                android:textSize="18sp"
+                />
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/emailTIL"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/emailEt"
-            android:inputType="textEmailAddress"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/passwordTIL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Email"/>
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginTop="20dp"
+            app:passwordToggleEnabled="true">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/passwordTIL"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_below="@+id/emailTIL"
-        app:passwordToggleEnabled="true">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/passwordEt"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/passwordEt"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginTop="20dp"
+                android:inputType="textPassword"
+                android:hint="密碼"
+                android:background="@drawable/background_input"
+                android:paddingHorizontal="16dp"
+                android:textSize="18sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/loginBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="password"/>
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginTop="50dp"
+            android:text="登 入"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:background="@color/colorPrimary" />
 
-    <Button
-        android:id="@+id/loginBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="登入"
-        android:layout_below="@+id/passwordTIL"
-        android:layout_centerHorizontal="true"
-        android:background="@color/colorPrimary"/>
+            <TextView
+                android:id="@+id/recoverTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="忘記密碼?按此找回密碼"
+                android:textSize="16sp"/>
 
-
-    <TextView
-        android:id="@+id/recoverTv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="忘記密碼?按此找回密碼"
-        android:layout_below="@+id/loginBtn" />
-
-    <TextView
-        android:id="@+id/nothave_accountTv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="還沒有帳號嗎?點此註冊!"
-        android:textAlignment="center"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/loginBtn"
-        android:layout_marginTop="30dp"/>
+            <TextView
+                android:id="@+id/nothave_accountTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="還沒有帳號嗎?點此註冊!"
+                android:textSize="16sp" />
 
 
-</RelativeLayout>
+
+
+    </LinearLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
+</ScrollView>
