--- a/app/src/main/res/layout/add/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/add/layout/activity_add_post.xml
@@ -20,18 +20,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:id="@+id/pImageIv"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_marginEnd="8dp"
-                android:layout_weight="1"
-                android:src="@drawable/guava" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcvPhoto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
+
+<!--            <ImageView-->
+<!--                android:id="@+id/pImageIv"-->
+<!--                android:layout_width="200dp"-->
+<!--                android:layout_height="200dp"-->
+<!--                android:layout_marginEnd="8dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:src="@drawable/ic_default_image" />-->
         </LinearLayout>
 
         <LinearLayout
@@ -54,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/bgColor"
-                android:padding="8dp"/>
+                android:padding="8dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -71,18 +73,18 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="6dp"
                 android:text="關於這些食物..."
-                android:textSize="24sp"
-                android:layout_marginBottom="6dp" />
+                android:textSize="24sp" />
 
             <EditText
                 android:id="@+id/pDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="說明這些食物的項目及數量，或任何其他細節(食物的品質、有效期限...)\n幫助換取者了解也更安心 !"
-                android:textSize="20sp"
                 android:background="@color/bgColor"
-                android:padding="12dp"/>
+                android:hint="說明這些食物的項目及數量，或任何其他細節(食物的品質、有效期限...)\n幫助換取者了解也更安心 !"
+                android:padding="12dp"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -99,17 +101,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="6dp"
                 android:text="方便面交的時間"
-                android:textSize="24sp"
-                android:layout_marginBottom="6dp" />
+                android:textSize="24sp" />
 
             <EditText
                 android:id="@+id/pTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
                 android:background="@color/bgColor"
-                android:padding="8dp"/>
+                android:padding="8dp"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -126,17 +128,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="6dp"
                 android:text="面交地點"
-                android:textSize="24sp"
-                android:layout_marginBottom="6dp" />
+                android:textSize="24sp" />
 
             <EditText
                 android:id="@+id/pLocation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
                 android:background="@color/bgColor"
-                android:padding="8dp"/>
+                android:padding="8dp"
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -152,8 +154,8 @@
                     android:id="@+id/useBox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"/>
+                android:layout_width="30dp"
+                android:layout_height="30dp"/>
 
             </LinearLayout>
 
@@ -164,41 +166,40 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:paddingHorizontal="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/face_to_face_location">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="設定貼文時效"
-                    android:textSize="24sp"
-                    android:layout_marginRight="20dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:text="設定貼文時效"
+                android:textSize="24sp" />
 
             <Spinner
                 android:id="@+id/spinner_time"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
 
-            <Button
-                android:id="@+id/pUploadBtn"
-                android:layout_width="240dp"
-                android:layout_height="wrap_content"
-                android:text="刊 登 !"
-                android:textSize="20dp"
-                android:textColor="@color/white"
-                android:background="@color/test02"
-                android:layout_marginTop="12dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/off_time" />
-
+        <Button
+            android:id="@+id/pUploadBtn"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:background="@color/test02"
+            android:text="刊 登 !"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/off_time" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
