--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -9,6 +9,13 @@
         android:layout_height="150dp"
         android:layout_marginBottom="10dp"
         android:layout_marginEnd="10dp"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/ic_default_image"
         android:scaleType="centerCrop"/>
-</LinearLayout>
+    <ImageView
+        android:id="@+id/imgDel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#66000000"
+        android:layout_gravity="top|end"
+        android:src="@drawable/ic_clear"/>
+</FrameLayout>
