--- a/app/src/main/res/layout/list/layout/activity_food_content.xml
+++ b/app/src/main/res/layout/list/layout/activity_food_content.xml
@@ -15,18 +15,13 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
-            android:id="@+id/pImageIv"
-            android:layout_width="0dp"
+            android:id="@+id/pImage"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:src="@drawable/guava" />
 
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/guava2" />
     </LinearLayout>
 
     <LinearLayout
@@ -36,6 +31,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img">
         <TextView
+            android:id="@+id/pTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="32sp"
@@ -56,6 +52,7 @@
 
 
         <TextView
+            android:id="@+id/pDes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="2天前買的芭樂，但拔了智齒咬不動"
@@ -85,7 +82,7 @@
         app:layout_constraintTop_toBottomOf="@+id/context_line">
 
         <com.blogspot.atifsoftwares.circularimageview.CircularImageView
-            android:id="@+id/uPicIv"
+            android:id="@+id/uImg"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="8dp"
@@ -93,7 +90,7 @@
             android:src="@drawable/guava" />
 
         <TextView
-            android:id="@+id/uNameTv"
+            android:id="@+id/uName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -118,10 +115,11 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="none"
+            android:background="@color/material_on_background_disabled"
             android:src="@drawable/v_time"
             android:paddingRight="12dp"/>
         <TextView
+            android:id="@+id/pTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="假日都可以"
@@ -142,11 +140,12 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="none"
+            android:background="@color/material_on_background_disabled"
             android:src="@drawable/v_location"
             android:paddingRight="12dp" />
 
         <TextView
+            android:id="@+id/pLoc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="社區門口"
