--- a/app/src/main/res/layout/add/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/add/layout/activity_add_post.xml
@@ -21,19 +21,19 @@
             app:layout_constraintTop_toTopOf="parent">
 
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rcvPhoto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
+<!--            <androidx.recyclerview.widget.RecyclerView-->
+<!--                android:id="@+id/rcvPhoto"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="1" />-->
 
-<!--            <ImageView-->
-<!--                android:id="@+id/pImageIv"-->
-<!--                android:layout_width="200dp"-->
-<!--                android:layout_height="200dp"-->
-<!--                android:layout_marginEnd="8dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:src="@drawable/ic_default_image" />-->
+            <ImageView
+                android:id="@+id/pImageIv"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_marginEnd="8dp"
+                android:layout_weight="1"
+                android:src="@drawable/ic_default_image" />
         </LinearLayout>
 
         <LinearLayout
